Cleanup:   * Fix several minor issues identified by PMD such as unused imports, unused     method parameters, etc.
git-svn-id: https://jamwiki.svn.sourceforge.net/svnroot/jamwiki/wiki/trunk@3382 f65b7e76-0091-dd46-87ae-4bc0c949c03e